test/resources/ValidPrograms/test_23.lo
// good test case
// main method return value:  4
// Author: Kaveri Mukundan (Fall 2021)

class TestNode
(int v; TestNode next;)
{
    void TestNode(int data) {
        {
            v = data;
            next = null;
        }
    }

    int getValue(){
        {return v;}
    }

    void setValue(int data) {
        {v = data;}
    }
}

class Main() {
    int main() {
        TestNode t;
        {
            t = new TestNode (4);
            return t.getValue();
        }
    }
}